# webcam

./: CMakeLists.txt  Pipfile  package.xml  run.py
src/: main.cpp
